* Mon Jun 05 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.2.3 ====
* Mon Jun 05 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Remove malloc/free for header/footer in mod_gridsite
* Mon Jun 05 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.2.2 ====
* Fri May 26 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.2.1 ====
* Mon Apr 24 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Reworked SSL session caching: passcodes directory now
  because /var/www/sessions by default, and also used
  to cache credentials according to SSL Session ID.
* Mon Apr 10 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Patch from Alberto di Meglio <alberto.di.meglio@cern.ch>
  to allow use of relocated httpd include files.
* Mon Apr  3 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Use dist for building tar balls
* Mon Apr  3 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.19 ====
* Fri Mar 31 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Final tidy up for gLite 3.1
* Fri Mar 31 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.18 ====
* Wed Mar 29 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- New proxy destroy and time functions. 
* Tue Mar 28 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Fixed bug in GACL admin interface that would cause
  internal server erorr sometimes when adding new 
  entries to and ACL.
* Sat Mar 25 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Change delegation header to Proxy-Delegation-Service
  instead of Grst-
* Wed Mar 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add GRSTx509MakeDelegationID() to grst_x509.c
- Include code for new style delegation proxy storage
* Fri Mar 17 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Associate ldconfig %post in spec with -shared RPM
* Thu Mar 16 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fixes for 200/201 error pages produced by Apache
- Fixes for onetime passcode non-removal if HTTPS