@@ -1,3 +1,6 @@
+* Thu Jun 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Backport fixes to grst_x509.c from 1.3.x for 
+  delegation utility functions used by findproxyfile
 * Mon Jun 05 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
 - ==== GridSite version 1.2.3 ====
 * Mon Jun 05 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
